fixed extra padding issue in ensemble

--- a/styles.css
+++ b/styles.css
@@ -335,7 +335,8 @@ h6 {
 }
 
 .onecol video {
-  width: 330px;
+  text-align: center;
+  width: 300px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   outline: none;
   height: 100%;
